Feat: 사이드 네비게이션 맨 위/맨 아래 항목의 모서리 반경을 가운데 항목과 다르게 구현

--- a/Week1/Homework/style.css
+++ b/Week1/Homework/style.css
@@ -319,14 +319,23 @@ body {
   color: #333;
   text-align: center;
   padding: 10px 14px;
-  border-radius: 12px;
   background: #ffe4ef;
   transition: 0.25s;
+  border-radius: 0;
+}
+
+.side-nav a:first-child {
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+}
+
+.side-nav a:last-child {
+  border-bottom-left-radius: 14px;
+  border-bottom-right-radius: 14px;
 }
 
 .side-nav a:hover {
   background: #ffb6c1;
-  border-radius: 18px;
   color: white;
   font-weight: 600;
 }
