--- a/Week1/Homework/style.css
+++ b/Week1/Homework/style.css
@@ -75,6 +75,7 @@ body {
   padding: 50px 60px;
   text-align: left;
   box-shadow: 0 4px 10px rgba(255, 105, 180, 0.15);
+  transform: translateY(-20px);
 }
 
 .introduce-profile {
