--- a/Week1/Homework/style.css
+++ b/Week1/Homework/style.css
@@ -309,6 +309,30 @@ body {
   100% { transform: translateX(-50%); }
 }
 
+/* 한마디 섹션 */
+.quote-section {
+  background: #fff;
+  border-radius: 14px;
+  max-width: 1100px;
+  margin: 0 auto 60px 280px;
+  padding: 40px;
+  text-align: left;
+  box-shadow: 0 2px 6px rgba(255, 105, 180, 0.1);
+}
+
+.quote-section h2 {
+  margin-bottom: 16px;
+  font-size: 20px;
+  color: #b53372;
+}
+
+.quote-section p {
+  font-size: 16px;
+  color: #333;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
 /* 사이드 Nav */
 .side-nav {
   position: fixed;
