--- a/Week2/Homework/styles/tokens.css
+++ b/Week2/Homework/styles/tokens.css
@@ -7,4 +7,8 @@
   --muted: #6b7a85;
   --white: #fff;
   --red: #ef4e4e;
+  --mint-50: #ecfaf6;  
+  --mint-200: #94d7ca;  
+  --mint-700: #0b6b7a;  
+  --table-hover: #fbfffe;
 }
